// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product page loading and error states displays an error message when there is an error loading the product 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    product={
      Object {
        "data": Array [],
        "error": true,
        "loading": false,
      }
    }
  >
    <h1>
      Unable to load product.
    </h1>
  </Product>
</Provider>
`;

exports[`Product page loading and error states displays loading spinner, when there is no error and product is loading 1`] = `
<Loading
  dispatch={[MockFunction]}
  product={
    Object {
      "data": Array [],
      "error": false,
      "loading": true,
    }
  }
>
  <Loading
    className="c-loading"
    color="#431048"
    delay={0}
    height={50}
    type="spin"
    width={50}
  >
    <div
      className="c-loading"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\">
  <path opacity=\\".25\\" d=\\"M16 0 A16 16 0 0 0 16 32 A16 16 0 0 0 16 0 M16 4 A12 12 0 0 1 16 28 A12 12 0 0 1 16 4\\"/>
  <path d=\\"M16 0 A16 16 0 0 1 32 16 L28 16 A12 12 0 0 0 16 4z\\">
    <animateTransform attributeName=\\"transform\\" type=\\"rotate\\" from=\\"0 16 16\\" to=\\"360 16 16\\" dur=\\"0.8s\\" repeatCount=\\"indefinite\\" />
  </path>
</svg>
",
        }
      }
      style={
        Object {
          "fill": "#431048",
          "height": 50,
          "width": 50,
        }
      }
    />
  </Loading>
</Loading>
`;

exports[`Product page loading and error states displays relevant message, when product data is empty 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    product={Object {}}
  >
    <h1>
      Unable to load product.
    </h1>
  </Product>
</Provider>
`;

exports[`Product page renders a product once data is present 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    product={
      Object {
        "asset_files": Array [
          Object {
            "asset_file": "1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
            "canonical_path": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
            "created_at": "2018-09-24T15:41:57Z",
            "deleted_at": null,
            "file_content_content_type": "image/jpeg",
            "file_content_filename": "SEPIA_nonslip_tray_420_210mm.jpg",
            "file_content_size": 24096,
            "id": "139",
            "image_height": 600,
            "image_width": 600,
            "meta_attributes": Object {},
            "name": "SEPIA nonslip tray 420×210mm.jpg",
            "reference": "1d6cc081-cbe6-4e90-b2e0-6f404ed68e64",
            "s3_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
            "updated_at": "2018-09-24T15:43:05Z",
          },
        ],
        "attribute_merchandising": Object {},
        "available_to_browse": false,
        "average_rating": 0,
        "bundles": Array [],
        "canonical_path": "/products/seed_product_51",
        "category_ids_cache": Array [
          58,
          59,
        ],
        "content_type": "markdown",
        "created_at": "2018-09-24T15:43:05Z",
        "deleted_at": null,
        "description": "Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
        "error": false,
        "ewis_status": "not_ewis_eligible",
        "has_assets": true,
        "id": "175",
        "loading": false,
        "max_current_price": 97.68,
        "max_price": 97.68,
        "merchandised": true,
        "merged_attribute_merchandising": Object {},
        "meta_attributes": Object {},
        "min_current_price": 16.95,
        "min_price": 16.95,
        "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
        "published": true,
        "rating": 0,
        "reference": "seed_product_51",
        "sellable": true,
        "seo_meta_description": "Product 51 - Ut quam iusto ea.",
        "seo_meta_keywords": "in, voluptatem, aut, fugit, quo",
        "seo_meta_title": "SEPIA nonslip tray 420×210mm",
        "slug": "seed_product_51",
        "template": null,
        "title": "SEPIA nonslip tray 420×210mm",
        "total_ratings": null,
        "updated_at": "2018-11-05T11:23:18Z",
        "variants": Array [
          Object {
            "available_to_browse": false,
            "available_to_order": false,
            "created_at": "2018-09-24T15:43:05Z",
            "current_price": 16.95,
            "deleted_at": null,
            "description": "Product 51 - variant 1

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
            "ewis_eligible": false,
            "expected_availability_date": null,
            "has_assets": true,
            "id": "343",
            "meta_attributes": Object {},
            "ordered_total": 10,
            "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
            "position": null,
            "price": 16.95,
            "price_includes_taxes": true,
            "product_id": 175,
            "reference": "dolor_50_1",
            "sku": "9337040128595",
            "stock_allocated_level": 10,
            "stock_available_level": 0,
            "stock_level": 1,
            "tax_code": "vat",
            "title": "Variant 1 for SEPIA nonslip tray 420×210mm",
            "updated_at": "2018-11-05T11:23:16Z",
          },
          Object {
            "available_to_browse": false,
            "available_to_order": false,
            "created_at": "2018-09-24T15:43:05Z",
            "current_price": 97.68,
            "deleted_at": null,
            "description": "Product 51 - variant 2

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
            "ewis_eligible": false,
            "expected_availability_date": null,
            "has_assets": true,
            "id": "344",
            "meta_attributes": Object {},
            "ordered_total": 1,
            "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
            "position": null,
            "price": 97.68,
            "price_includes_taxes": true,
            "product_id": 175,
            "reference": "voluptas_50_2",
            "sku": "0927967530244",
            "stock_allocated_level": 1,
            "stock_available_level": 0,
            "stock_level": 1,
            "tax_code": "vat",
            "title": "Variant 2 for SEPIA nonslip tray 420×210mm",
            "updated_at": "2018-10-31T10:24:00Z",
          },
        ],
        "web_product_description": "Product 51 - Perspiciatis recusandae voluptatem culpa.",
        "web_product_name": "SEPIA nonslip tray 420×210mm",
      }
    }
  >
    <ProductDisplay
      addToBag={[Function]}
      changeVariant={[Function]}
      product={
        Object {
          "asset_files": Array [
            Object {
              "asset_file": "1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
              "canonical_path": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
              "created_at": "2018-09-24T15:41:57Z",
              "deleted_at": null,
              "file_content_content_type": "image/jpeg",
              "file_content_filename": "SEPIA_nonslip_tray_420_210mm.jpg",
              "file_content_size": 24096,
              "id": "139",
              "image_height": 600,
              "image_width": 600,
              "meta_attributes": Object {},
              "name": "SEPIA nonslip tray 420×210mm.jpg",
              "reference": "1d6cc081-cbe6-4e90-b2e0-6f404ed68e64",
              "s3_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
              "updated_at": "2018-09-24T15:43:05Z",
            },
          ],
          "attribute_merchandising": Object {},
          "available_to_browse": false,
          "average_rating": 0,
          "bundles": Array [],
          "canonical_path": "/products/seed_product_51",
          "category_ids_cache": Array [
            58,
            59,
          ],
          "content_type": "markdown",
          "created_at": "2018-09-24T15:43:05Z",
          "deleted_at": null,
          "description": "Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
          "error": false,
          "ewis_status": "not_ewis_eligible",
          "has_assets": true,
          "id": "175",
          "loading": false,
          "max_current_price": 97.68,
          "max_price": 97.68,
          "merchandised": true,
          "merged_attribute_merchandising": Object {},
          "meta_attributes": Object {},
          "min_current_price": 16.95,
          "min_price": 16.95,
          "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
          "published": true,
          "rating": 0,
          "reference": "seed_product_51",
          "sellable": true,
          "seo_meta_description": "Product 51 - Ut quam iusto ea.",
          "seo_meta_keywords": "in, voluptatem, aut, fugit, quo",
          "seo_meta_title": "SEPIA nonslip tray 420×210mm",
          "slug": "seed_product_51",
          "template": null,
          "title": "SEPIA nonslip tray 420×210mm",
          "total_ratings": null,
          "updated_at": "2018-11-05T11:23:18Z",
          "variants": Array [
            Object {
              "available_to_browse": false,
              "available_to_order": false,
              "created_at": "2018-09-24T15:43:05Z",
              "current_price": 16.95,
              "deleted_at": null,
              "description": "Product 51 - variant 1

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
              "ewis_eligible": false,
              "expected_availability_date": null,
              "has_assets": true,
              "id": "343",
              "meta_attributes": Object {},
              "ordered_total": 10,
              "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
              "position": null,
              "price": 16.95,
              "price_includes_taxes": true,
              "product_id": 175,
              "reference": "dolor_50_1",
              "sku": "9337040128595",
              "stock_allocated_level": 10,
              "stock_available_level": 0,
              "stock_level": 1,
              "tax_code": "vat",
              "title": "Variant 1 for SEPIA nonslip tray 420×210mm",
              "updated_at": "2018-11-05T11:23:16Z",
            },
            Object {
              "available_to_browse": false,
              "available_to_order": false,
              "created_at": "2018-09-24T15:43:05Z",
              "current_price": 97.68,
              "deleted_at": null,
              "description": "Product 51 - variant 2

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
              "ewis_eligible": false,
              "expected_availability_date": null,
              "has_assets": true,
              "id": "344",
              "meta_attributes": Object {},
              "ordered_total": 1,
              "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
              "position": null,
              "price": 97.68,
              "price_includes_taxes": true,
              "product_id": 175,
              "reference": "voluptas_50_2",
              "sku": "0927967530244",
              "stock_allocated_level": 1,
              "stock_available_level": 0,
              "stock_level": 1,
              "tax_code": "vat",
              "title": "Variant 2 for SEPIA nonslip tray 420×210mm",
              "updated_at": "2018-10-31T10:24:00Z",
            },
          ],
          "web_product_description": "Product 51 - Perspiciatis recusandae voluptatem culpa.",
          "web_product_name": "SEPIA nonslip tray 420×210mm",
        }
      }
    >
      <div
        className="c-product-display"
      >
        <div
          className="c-product-display__body"
        >
          <div
            className="c-product-display__content-image"
          >
            <div
              className="c-product-display__gallery"
            >
              <Image
                className="c-product-display__gallery-image"
                key="https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg"
                src="https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg"
              >
                <div
                  className="c-product-display__gallery-image"
                >
                  <LazyLoad
                    debounce={true}
                    elementType="div"
                    offset={0}
                    offsetBottom={0}
                    offsetHorizontal={0}
                    offsetLeft={0}
                    offsetRight={0}
                    offsetTop={0}
                    offsetVertical={0}
                    throttle={250}
                  >
                    <div
                      className="LazyLoad"
                      style={
                        Object {
                          "height": undefined,
                          "width": undefined,
                        }
                      }
                    />
                  </LazyLoad>
                </div>
              </Image>
            </div>
          </div>
          <div
            className="c-product-display__content-details"
          >
            <div
              className="c-product-display__info"
            >
              <div
                className="c-product-display__info-headings"
              >
                <div
                  className="c-product-display__info-title"
                >
                  SEPIA nonslip tray 420×210mm
                </div>
              </div>
              <div
                className="c-product-display__info-price"
              >
                <ProductPrice
                  maxPrice={97.68}
                  minPrice={16.95}
                >
                  <div
                    className="c-product-price"
                  >
                    <span>
                      £
                      16.95
                       - £
                      97.68
                    </span>
                  </div>
                </ProductPrice>
              </div>
              <div
                className="c-product-display__info-rating"
              >
                <span
                  className="c-product-display__info-rating--empty"
                  key="1"
                >
                  ★
                </span>
                <span
                  className="c-product-display__info-rating--empty"
                  key="2"
                >
                  ★
                </span>
                <span
                  className="c-product-display__info-rating--empty"
                  key="3"
                >
                  ★
                </span>
                <span
                  className="c-product-display__info-rating--empty"
                  key="4"
                >
                  ★
                </span>
                <span
                  className="c-product-display__info-rating--empty"
                  key="5"
                >
                  ★
                </span>
                <p
                  className="c-product-display__info-reviews"
                >
                  Read Reviews
                </p>
              </div>
              <div
                className="c-product-display__info-variant"
              >
                <VariantSelector
                  aria-label="Variant Selector"
                  name="line_item[item_id]"
                  onChange={[Function]}
                  prompt="Select a Product"
                  variants={
                    Array [
                      Object {
                        "available_to_browse": false,
                        "available_to_order": false,
                        "created_at": "2018-09-24T15:43:05Z",
                        "current_price": 16.95,
                        "deleted_at": null,
                        "description": "Product 51 - variant 1

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
                        "ewis_eligible": false,
                        "expected_availability_date": null,
                        "has_assets": true,
                        "id": "343",
                        "meta_attributes": Object {},
                        "ordered_total": 10,
                        "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
                        "position": null,
                        "price": 16.95,
                        "price_includes_taxes": true,
                        "product_id": 175,
                        "reference": "dolor_50_1",
                        "sku": "9337040128595",
                        "stock_allocated_level": 10,
                        "stock_available_level": 0,
                        "stock_level": 1,
                        "tax_code": "vat",
                        "title": "Variant 1 for SEPIA nonslip tray 420×210mm",
                        "updated_at": "2018-11-05T11:23:16Z",
                      },
                      Object {
                        "available_to_browse": false,
                        "available_to_order": false,
                        "created_at": "2018-09-24T15:43:05Z",
                        "current_price": 97.68,
                        "deleted_at": null,
                        "description": "Product 51 - variant 2

Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
                        "ewis_eligible": false,
                        "expected_availability_date": null,
                        "has_assets": true,
                        "id": "344",
                        "meta_attributes": Object {},
                        "ordered_total": 1,
                        "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/139/1537803717.9168365-SEPIA_nonslip_tray_420_210mm.jpg",
                        "position": null,
                        "price": 97.68,
                        "price_includes_taxes": true,
                        "product_id": 175,
                        "reference": "voluptas_50_2",
                        "sku": "0927967530244",
                        "stock_allocated_level": 1,
                        "stock_available_level": 0,
                        "stock_level": 1,
                        "tax_code": "vat",
                        "title": "Variant 2 for SEPIA nonslip tray 420×210mm",
                        "updated_at": "2018-10-31T10:24:00Z",
                      },
                    ]
                  }
                >
                  <div
                    className="o-variant-selector"
                  >
                    <select
                      aria-label="Variant Selector"
                      name="line_item[item_id]"
                      onChange={[Function]}
                    >
                      <option
                        aria-posinset="0"
                        aria-setsize={2}
                        role="option"
                        value=""
                      >
                        Select a Product
                      </option>
                      <option
                        aria-posinset={1}
                        aria-setsize={2}
                        data-price={16.95}
                        data-stock-available-level={0}
                        data-variant-id="343"
                        key="0"
                        role="option"
                        value="9337040128595"
                      >
                        Variant 1 for SEPIA nonslip tray 420×210mm
                      </option>
                      <option
                        aria-posinset={2}
                        aria-setsize={2}
                        data-price={97.68}
                        data-stock-available-level={0}
                        data-variant-id="344"
                        key="1"
                        role="option"
                        value="0927967530244"
                      >
                        Variant 2 for SEPIA nonslip tray 420×210mm
                      </option>
                    </select>
                  </div>
                </VariantSelector>
              </div>
            </div>
            <div
              className="c-product-display__buttons"
            >
              <Button
                aria-label="Add to Basket"
                className="c-product-display__buttons-basket o-button--sml"
                label="ADD TO BASKET"
                onClick={[Function]}
                status="positive"
              >
                <div
                  className="o-button__container"
                >
                  <button
                    aria-label="Add to Basket"
                    className="c-product-display__buttons-basket o-button--sml o-button o-button--positive"
                    disabled={false}
                    onClick={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    ADD TO BASKET
                  </button>
                </div>
              </Button>
            </div>
            <div
              className="c-product-display__body-dropdowns"
            >
              <div
                className="c-product-display__description"
              >
                <h1
                  className="c-product-display__description-title"
                >
                  Product Details
                </h1>
                <label
                  className="c-product-dispay__label"
                  htmlFor="description"
                />
                <input
                  id="description"
                  type="checkbox"
                />
                <span
                  className="c-product-display__arrow"
                />
                <div
                  className="c-product-display__description-text"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "Assam in north-eastern India grows exceptional tea in the lush soil of the Brahmaputra valley – and we pick ours at the peak of the season from some of the region's finest estates during the second flush harvest. It's rich, strong and full-bodied with malty notes.",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </ProductDisplay>
  </Product>
</Provider>
`;
